--- a/style.css
+++ b/style.css
@@ -69,9 +69,10 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
-.container{
-  background: lightblue;
-}
+
 .hour{
   background: lightgreen;
+}
+.row{
+  margin: 10px;
 }
