--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ textarea{
   border-top: 1px dashed #000000;
 }
 
-.past {
+/* .past {
   background-color: #d3d3d3;
   color: white;
 }
@@ -55,7 +55,7 @@ textarea{
 .future {
   background-color: #77dd77;
   color: white;
-}
+} */
 
 .saveBtn {
   border-left: 1px solid black;
@@ -72,7 +72,7 @@ textarea{
 
 .hour{
   background: lightgreen;
-  font-size: 20px;
+  font-size: 18px;
   font-family: "Rock Salt";
 }
 .row{
